// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#1 1`] = `
import { Trans, SelectOrdinal } from "@lingui/react/macro";
<Trans>
  This is my{" "}
  <SelectOrdinal
    value={count}
    one="#st"
    two={\`#nd\`}
    other={<strong>#rd</strong>}
  />{" "}
  cat.
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as _Trans } from "@lingui/react";
<_Trans
  {
    /*i18n*/
    ...{
      id: "3YEV8L",
      message:
        "This is my {count, selectordinal, one {#st} two {#nd} other {<0>#rd</0>}} cat.",
      values: {
        count: count,
      },
      components: {
        0: <strong />,
      },
    }
  }
/>;

`;

exports[`#2 1`] = `
import { Trans, SelectOrdinal } from "@lingui/react/macro";
<Trans>
  This is my
  <SelectOrdinal
    value={count}
    one="#st"
    two={\`#nd\`}
    other={<strong>#rd</strong>}
  />{" "}
  cat.
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as _Trans } from "@lingui/react";
<_Trans
  {
    /*i18n*/
    ...{
      id: "Dz3XK1",
      message:
        "This is my{count, selectordinal, one {#st} two {#nd} other {<0>#rd</0>}} cat.",
      values: {
        count: count,
      },
      components: {
        0: <strong />,
      },
    }
  }
/>;

`;

exports[`#3 1`] = `
import { Trans, SelectOrdinal } from "@lingui/react/macro";
<Trans>
  This is my{" "}
  <SelectOrdinal
    value={user.numCats}
    one="#st"
    two={\`#nd\`}
    other={<strong>#rd</strong>}
  />{" "}
  cat.
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as _Trans } from "@lingui/react";
<_Trans
  {
    /*i18n*/
    ...{
      id: "CDpzE+",
      message:
        "This is my {0, selectordinal, one {#st} two {#nd} other {<0>#rd</0>}} cat.",
      values: {
        0: user.numCats,
      },
      components: {
        0: <strong />,
      },
    }
  }
/>;

`;
